k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app
  namespace: node-app
spec:
  selector:
    app: node-app
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
